--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+.idea/
+bin/
+
 # C extensions
 *.so
 
@@ -101,3 +104,5 @@ ENV/
 .mypy_cache/
 
 RUNS/
+
+.DS_Store
